fix pages on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -194,7 +194,7 @@ html {
       border: none;
       font-weight: 300;
       color: $text;
-      padding: 10px 18px;
+      padding: 10px 14px;
     }
 
     .pagenum {
@@ -253,6 +253,10 @@ html {
 
     .mobile-only {
       display: block !important;
+    }
+
+    .slidecontrol a {
+      padding: 10px 8px;
     }
   }
 
